samples/_failures_safe/1761288212_c7750e_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_23ad4490.c: In function ‘main’:
./samples/SAFE/__tmp_23ad4490.c:141:12: error: missing terminating " character
  141 |     printf("Compression and decomp
      |            ^~~~~~~~~~~~~~~~~~~~~~~
./samples/SAFE/__tmp_23ad4490.c:141:5: error: expected expression at end of input
  141 |     printf("Compression and decomp
      |     ^~~~~~
./samples/SAFE/__tmp_23ad4490.c:141:5: error: expected declaration or statement at end of input
